# receipt-printer-version-2

./: .env.example  pyproject.toml
routers/: tasks.py  webhooks.py
src/: main.py
src/api/: openai_api.py
src/app/: models.py
src/routers/: init.py  webhooks.py
src/util/: config.py  security.py
tests/: conftest.py  test_tasks.py  test_webhooks.py
